2006-11-07  Steve Ellcey  <sje@cup.hp.com>

	PR other/25028
	* config/ia64/t-hpux (LIB1ASMFUNCS):  Filter out _fixtfdi,
	_fixunstfdi, and  _floatditf

2006-11-06  Anatoly Sokolov <aesok@post.ru>

	* config/avr/avr-protos.h (mask_one_bit_p, const_int_pow2_p): Remove 
	prototype.
	* config/avr/avr.c (mask_one_bit_p, const_int_pow2_p): Remove.
	(output_movhi, ashlhi3_out, ashlsi3_out, ashrhi3_out, ashrsi3_out,
	lshrhi3_out, lshrsi3_out): Remove unnecessary code for handling value
	which start in an odd register.

2006-11-07  Richard Sandiford  <richard@codesourcery.com>

	* config/mips/mips.h (ISA_HAS_PREFETCHX): Fix typo.

2006-11-07  Josh Conner  <jconner@apple.com>

	* doc/invoke.texi (fstrict-aliasing): Move implementation
	details...
	* doc/tree-ssa.texi (Alias analysis): ...here.

2006-11-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/29610
	* tree-cfgcleanup.c (cleanup_control_flow): Honor return value
	of tree_purge_dead_eh_edges as it may free dominators.

	* g++.dg/other/pr29610.C: New testcase.

2006-11-07  David Ung  <davidu@mips.com>

	* config/mips/mips.c (mips_rtx_cost_optimize_size): New table of
	costs when optimizing for size.
	(override_options): Use mips_rtx_cost_optimize_size table for cost
	calculations.

2006-11-07  Jie Zhang  <jie.zhang@analog.com>

	* gcc.c (process_command): Treat -b as normal switch if its argument
	has no dash.
	
2006-11-07  David Ung  <davidu@mips.com>
	
	* config/mips/mips.h (ISA_HAS_PREFETCHX): Add ISA_MIPS32R2 to the
	list.

2006-11-06  Eric Christopher  <echristo@apple.com>

	* config.gcc: Add x86_64-darwin host support.
	* config.host: Ditto.
	* config/i386/darwin64.h: New file.
	* config/i386/t-darwin64: Ditto.

2006-11-06  Janis Johnson  <janis187@us.ibm.com>

	* gcc/doc/sourcebuild.texi (Test Directives): Add output-exists
	and output-exists-not.

2006-11-06  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR tree-opt/29439
	* tree-vrp.c (vrp_int_const_binop): Use the correct tree when