@@ -1,3 +1,7 @@
+2006-11-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/inline-17.c: New test.
+
 2006-11-07  Steve Ellcey  <sje@cup.hp.com>
 
 	PR other/25028
